# pretix-email-restrictions

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: pretix.cfg
pretix_email_restrictions/: __init__.py  apps.py  checkoutflow.py  forms.py  restriction.py  signals.py  urls.py  views.py
pretix_email_restrictions/management/commands/: setup_demo.py
pretix_email_restrictions/templates/pretix_email_restrictions/: checkout_restriction.html
pretix_email_restrictions/templates/pretixcontrol/email_restrictions/: event_settings.html  organizer_settings.html
tests/: conftest.py  settings.py  test_checkout_step.py  test_restriction.py  test_settings_views.py  test_signals.py
